[package]
edition = "2021"
name = "treelight"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2" }
napi-derive = "2.12.2"
lazy_static = "1.4.0"

# grammars
tree-sitter-highlight = "0.20"

tree-sitter-go = "0.20.0"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20.4"
tree-sitter-comment = "0.1.0"
tree-sitter-c = "0.20.6"
tree-sitter-ruby = "0.20.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
