[package]
edition = "2021"
name = "treelight"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.7.0" }
napi-derive = "3.4.0"
lazy_static = "1.5.0"
anyhow = "1.0.100"
toml = "0.9.8"
log = "0.4.29"

# grammars
tree-sitter-highlight = "0.26"

tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25.0"
tree-sitter-comment = "0.3.0"
tree-sitter-c = "0.24.1"
tree-sitter-ruby = "0.23.1"
regex = "1.12.2"
once_cell = "1.21.3"

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto = true
